small dark mode fix

--- a/static/style.css
+++ b/static/style.css
@@ -583,6 +583,7 @@ div.code-toolbar {
         color-scheme: light;
 
         background-color: var(--bg);
+        color: var(--text);
 
         border-bottom-left-radius: 0.5rem;
         font-family: var(--font-serif);
